#174 fix: objects count in relation view always visible, fix pagination buttons

--- a/src/Template/Element/Form/relations.scss
+++ b/src/Template/Element/Form/relations.scss
@@ -8,16 +8,17 @@
             margin: 0;
         }
 
-        .pagination-items, .page-size, .pagination-buttons {
+        .page-size, .pagination-buttons {
             display: none;
         }
 
+        .count-items {
+            order: 2;
+        }
+
         &.show-pagination {
-            .pagination-items, .page-size, .pagination-buttons {
+            .page-size, .pagination-buttons {
                 display: block;
-            }
-            .pagination-items {
-                order: 2;
             }
             .page-size {
                 order: 3;
